--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	
+	<div id="wrapper">
+		
+	</div>
+
+	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 </body>
 </html>
