--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
 </head>
 <body>
 	<div id="wrapper">
-		
-	</div>
+
+		<table id="todo">
+				<thead>Mijn to do lijst</thead>
+
+			</table>
+		</div>
+
 
 	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 </body>
