--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 
 		<table id="todo">
 				<thead>Mijn to do lijst</thead>
-
+				<tr>
+					<td>testrij</td>
+					<td>testrij</td>
+					<td>testrij</td>
+				</tr>
 			</table>
 		
 
