--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 					<td>testrij</td>
 					<td>testrij</td>
 				</tr>
-			</table>
+		</table>
+	
+
+	</div>
 		
-
-
 	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 </body>
 </html>
