--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 	<div id="wrapper">
 
 		<table id="todo">
-				<thead>Mijn to do lijst</thead>
+				<thead>
 				<tr>
-					<td>testrij</td>
-					<td>testrij</td>
-					<td>testrij</td>
+					<th>th</th>
+					<th>th</th>
+					<th>th</th>
 				</tr>
+				</thead>
+				
 		</table>
 	
 
