--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
 	</div>
 		
 	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+	<script src="js/functions.js"></script>
 </body>
 </html>
