--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 		<table id="todo">
 				<thead>
 				<tr>
-					<th>th</th>
-					<th>th</th>
-					<th>th</th>
+					<th>Nog te doen</th>
+					<th>Datum</th>
+					<th>Compleet</th>
 				</tr>
 				</thead>
 				
