--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>To do list</title>
+	<title>edit item</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<div id="wrapper">
-		<table id="todo">
+		<!-- <label for="taskname"></label> --><input type="text" placeholder="enter your task" name="taskname"/>
+		<!-- <label for="date"></label> --><input type="date" placeholder="choose date" name="date"/>
+		<!-- <label for="save"></label> --><button name="save">save</button>
+		<!-- <label for="cancel"></label> --><button name="cancel">cancel</button>
+	</div>	
+	<table id="todo">
 				<thead>
 				<tr>
 					<th>Nog te doen</th>
@@ -17,10 +22,6 @@
 				</thead>
 				
 		</table>
-	
-
-	</div>
-		
 	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 	<script src="js/functions.js"></script>
 </body>
