--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<!-- <label for="taskname"></label> --><input type="text" placeholder="enter your task" name="taskname"/>
 		<!-- <label for="date"></label> --><input type="date" placeholder="choose date" name="date"/>
 		<!-- <label for="save"></label> --><button name="save">save</button>
-		<!-- <label for="cancel"></label> --><button name="cancel">cancel</button>
+		<!-- <label for="cancel"></label> --><button name="cancellen">cancel</button>
 	</div>	
 	<table id="todo">
 				<thead>
